# Aventuras

./: .eslintignore  .gitattributes  .gitignore  .prettierrc  AGENTS.md  README.md  aventura.apk.idsig  compileApk.sh  components.json  eslint.config.js  lefthook.yml  package-lock.json  package.json  tailwind.config.ts  vite.config.js
.github/workflows/: ci.yml  lint-and-typecheck.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scripts/: android-setup.sh  check_migrations.js  release.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: .editorconfig  004_entry_lore_blacklist.sql  006_story_retry_state.sql  007_story_style_review_state.sql  020_migrate_legacy_prompts.sql  021_story_background_image.sql  021_translation.sql  023_simplify_character_vault.sql  024_background_images.sql  025_vault_assistant_conversations.sql  025_world_state_deltas.sql  026_cow_branches.sql  027_entry_suggested_actions.sql  028_cow_tombstones.sql  029_branch_entity_snapshots.sql  030_pack_variable_extensions.sql  030_preset_packs.sql  032_runtime_variables.sql  033_runtime_variable_pinned.sql  033_vault_assistant_conversations.sql
src-tauri/src/: lib.rs  migration_patch.rs
src-tauri/src/sync/: commands.rs  server.rs  types.rs
src/routes/: +layout.svelte  +page.svelte
src/themes/: botanical.css  catppuccin-frappe.css  catppuccin-latte.css  catppuccin-macchiato.css  catppuccin-mocha.css  cyberpunk.css  dark.css  dracula.css  fallen-down.css  fantasy.css  index.css  (+17 more)
(+505 files in other folders)
